--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/9.6.0/css/fabric.min.css">
     <link rel="stylesheet" href="/build/main.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/font-awesome.min.css" rel="stylesheet" />
     <title>Document</title>
 </head>
 <body>
